// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Mock render - areas.indicator - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "children": <div
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>,
      "className": "css-1nj70l9",
      "delay": undefined,
      "id": "areas.indicator",
      "indicator": <div
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        indicator
      </div>,
      "size": undefined,
      "spinning": undefined,
      "tip": undefined,
      "wrapperClassName": "css-0",
    },
    Object {},
  ],
]
`;

exports[`Mock render - default - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "children": <div
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>,
      "className": "css-1nj70l9",
      "delay": undefined,
      "id": "default",
      "indicator": undefined,
      "size": undefined,
      "spinning": undefined,
      "tip": undefined,
      "wrapperClassName": "css-0",
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.delay - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "children": <div
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>,
      "className": "css-1nj70l9",
      "delay": 3000,
      "id": "properties.delay",
      "indicator": undefined,
      "size": undefined,
      "spinning": undefined,
      "tip": undefined,
      "wrapperClassName": "css-0",
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.size: large - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "children": <div
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>,
      "className": "css-1nj70l9",
      "delay": undefined,
      "id": "properties.size: large",
      "indicator": undefined,
      "size": "large",
      "spinning": undefined,
      "tip": undefined,
      "wrapperClassName": "css-0",
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.size: small - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "children": <div
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>,
      "className": "css-1nj70l9",
      "delay": undefined,
      "id": "properties.size: small",
      "indicator": undefined,
      "size": "small",
      "spinning": undefined,
      "tip": undefined,
      "wrapperClassName": "css-0",
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.spinning - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "children": <div
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>,
      "className": "css-1nj70l9",
      "delay": undefined,
      "id": "properties.spinning",
      "indicator": undefined,
      "size": undefined,
      "spinning": false,
      "tip": undefined,
      "wrapperClassName": "css-0",
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.style: border: 5px solid blue - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "children": <div
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>,
      "className": "css-7qep0h",
      "delay": undefined,
      "id": "properties.style: border: 5px solid blue",
      "indicator": undefined,
      "size": undefined,
      "spinning": undefined,
      "tip": undefined,
      "wrapperClassName": "css-0",
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.tip - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "children": <div
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>,
      "className": "css-1nj70l9",
      "delay": undefined,
      "id": "properties.tip",
      "indicator": undefined,
      "size": undefined,
      "spinning": undefined,
      "tip": "Loading spinner",
      "wrapperClassName": "css-0",
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.wrapperStyle: border: 5px solid blue - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "children": <div
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>,
      "className": "css-1nj70l9",
      "delay": undefined,
      "id": "properties.wrapperStyle: border: 5px solid blue",
      "indicator": undefined,
      "size": undefined,
      "spinning": undefined,
      "tip": undefined,
      "wrapperClassName": "css-1dcnkry",
    },
    Object {},
  ],
]
`;
